# Quoridor-Demo

./: README.md
client/: Quoridor.ccs  Quoridor.cfg  Quoridor.udf
client/Classes/: AI.cpp  AI.h  AppDelegate.cpp  ChoosePlayLayer.cpp  ChoosePlayLayer.h  GameLayer.cpp  GameLayer.h  GameWithCmpLayer.cpp  GameWithCmpLayer.h  GameWithPlayerLayer.cpp  GameWithPlayerLayer.h  GlobalDefine.h  HelloWorldScene.cpp  HelloWorldScene.h  LoginLayer.cpp  LoginLayer.h  ResultLayer.cpp  ResultLayer.h  SettingLayer.cpp  SettingLayer.h  SplashLayer.cpp  SplashLayer.h  client.cpp  client.h  message.cpp  message.h
client/Resources/pnglist/: ChoosePlayScene.plist  PlayerInfoLayer.plist  common_buttons.plist  userHead.plist
client/Resources/res/: MainScene.csb  Scene.csb  chooseLayer.csb  choosePlayLayer.csb  gameLayer.csb  gameMoreLayer.csb  loginLayer.csb  onOffNode.csb  registerLayer.csb  settingLayer.csb  wResultLayer.csb
client/cocosstudio/: MainScene.csd  Plist.csi  chooseLayer.csd  gameLayer.csd  gameMoreLayer.csd  lResultLayer.csd  loginLayer.csd  map.tmx  onOffNode.csd  pResultLayer.csd  particle.plist  particle_texture.plist  registerLayer.csd  settingLayer.csd  square6.pvr  wResultLayer.csd
client/cocosstudio/Plist/: Dialog.plist  GameLayer.plist  GameResultLayer.plist  login.plist  (+1 more)
server/: CMakeLists.txt  connection.cpp  connection.h  factory.hpp  global_data.h  io_service_pool.cpp  io_service_pool.h  main.cpp  message.cpp  message.h  server.cpp  server.h  sync_queue.cpp  sync_queue.h
server/action/: action.h  before_game_action.h  login_action.h  register_action.h
(+9 files in other folders)
